# RAG_1

./: .gitignore  README.md  main.py  pyproject.toml
data/: space_handbook.txt
src/: config.py  database.py  document_utils.py  ingestion.py  query_rag.py  rag_chain.py
src/components/: document_loader.py  text_splitter.py
tests/: test_query_rag.py
